--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -120,7 +120,7 @@
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>CMM</span> <i class="val">55%</i></span>
+                <span class="skill"><span>Marketing</span> <i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
